finally collisions working!

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 	</style>
 </head>
 <body>
-	<canvas id="game-canvas" width="800" height="600px"></canvas>
+	<img src="assets/PixelAdventure/Background/Blue.png" id="bgblue" style="display: none;">
+	<img src="assets/PixelAdventure/Background/Yellow.png" id="bgyellow" style="display: none;">
+	<img src="assets/PixelAdventure/Background/Pink.png" id="bgpink" style="display: none;">
+	<canvas id="game-canvas" width="320" height="320"></canvas>
 
-	<script src="dist/index.js" type="module"></script>
+	<script src="dist/index.js" type="module" defer></script>
 </body>
 </html>
